--- a/style.css
+++ b/style.css
@@ -1,37 +1,36 @@
-
 /* Arka Plan Resmi için */
 
-body{
-background-image: url(/Img/RoyalParfume.png);
-width: 100%;
-height: 100%;
-background-clip: padding-box;
+body {
+    background-image: url(/Img/RoyalParfume.png);
+    width: 100%;
+    height: 100%;
+    background-clip: padding-box;
 
 }
 
-.container{
+.container {
     text-align: center;
     margin-left: 25%;
     max-width: 1200px;
-    
+
 }
 
-main{
+main {
     background-color: rgb(173, 125, 61);
     border: 1px solid whitesmoke;
     width: 75%;
 }
 
-a{
+a {
     text-decoration: none;
-    
+
 }
 
-nav>ul>:first-child{
+nav>ul>:first-child {
     color: aqua;
 }
 
-.head{
+.head {
     background-color: rgb(173, 125, 61);
     text-align: center;
     color: rgb(224, 222, 218);
@@ -39,62 +38,93 @@ nav>ul>:first-child{
     width: 75%;
 }
 
-#logo{
+#logo {
     width: 80px;
     height: 80px;
 }
 
-.company-title{
-font-family: 'Times New Roman', Times, serif;
-font-style: italic;
-font-weight: bold;
-font-size: xx-large;
-color: azure;
+.company-title {
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: xx-large;
+    color: azure;
 }
 
-nav{
+nav {
     width: 75%;
+    background-color: rgb(173, 125, 61);
+    height: 50px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-align: center;
+    align-items: center;
+
 }
 
 
-.navlink{
+.navlink {
     text-align: center;
     background-color: rgb(173, 125, 61);
     border: 1px solid whitesmoke;
     list-style: none;
+
 }
 
-.nav-item{
+.nav-item {
     color: whitesmoke;
     font-weight: 500;
+    float: left;
+    /* Folat left özelliği ile itemimizi block olsa bile sola yaslayabiliriz.*/ 
+
+
+
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 3%;
 }
 
-.products{
+.products {
     list-style: none;
     text-align: center;
+    max-width: 94%;
+    padding-right: 6%;
+
 }
 
-.products-list{
+.products-list {
     border: 2px solid rgb(236, 176, 63);
+    box-shadow: 0px 0px 15px rgb(92, 70, 29);
+    ;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 600;
     font-size: xx-large;
     font-display: initial;
     font-style: italic;
-    
-    
+
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    max-height: 96%;
+    max-width: 84%;
+
+    margin-top: 3%;
+    margin-bottom: 3%;
+
 }
 
-.product-image{
+.product-image {
     max-width: 400px;
     max-height: 400px;
     border-radius: 25px;
-    box-shadow: 20 20 20 rgb(22, 21, 21);
+    box-shadow: 16px 16px 16px rgb(22, 21, 21);
+    margin-bottom: 3%;
 }
 
 
 
-.tanitim{
+.tanitim {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 600;
@@ -105,6 +135,6 @@ nav{
     text-decoration: wavy;
 }
 
-.foot{
+.foot {
     width: 75%;
 }
